--- a/android/src/main/res/layout/scnner_view.xml
+++ b/android/src/main/res/layout/scnner_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
 
-    <com.shouzhong.scanner.ScannerView
+    <com.example.scanner.lib.ScannerView
         android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
